minor fix to scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -64,7 +64,7 @@ footer{
 }
 
 .simplebar-track{
-  pointer-events: auto;
+  pointer-events: auto !important;
 
   &.simplebar-horizontal{
     bottom:-1.25rem !important;
